Change class name to fix overlapping name on image

--- a/app/assets/stylesheets/moving_people_safely/_court_dashboard.scss
+++ b/app/assets/stylesheets/moving_people_safely/_court_dashboard.scss
@@ -54,7 +54,7 @@ table.court-dashboard {
   width: 90px;
 }
 
-.detainee-image {
+.detainee-photo {
   height: 112px;
 }
 
